# syncspirit

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  conanfile.py  conanfile.txt  faq.md  mdbx-xp-patch.diff  syncspirit.conf  syncspirit.toml  todo.txt
.sourcecraft/: ci.yaml  conan-profile-linux-appimage  conan-profile-linux-native  conan-profile-win32  conan-profile-win64  mxe-settings-win32.mk  mxe-settings-win64.mk
docs/: building.md  config.md  ct-ng-config  design.dot  mingw  old_linux  ui-daemon.md  ui-fltk.md  xp
lib/: windows-xp.patch
misc/: SyncSpiritIcon.icns  make-appimage.sh  mdbx-win32.patch  post-install-nix.pl  post-install-win32.py  syncspirit-config.h.in  syncspirit-daemon.desktop  syncspirit-daemon.sh  syncspirit-fltk.desktop  syncspirit-fltk.sh  ubuntu14.04.toolchain
src/: configuration.cpp  configuration.h  constants.cpp  constants.h  main.cpp
src/bouncer/: bouncer_actor.cpp  bouncer_actor.h  bouncer_supervisor.cpp  bouncer_supervisor.h  messages.hpp
src/config/: bep.h  db.h  device.h  dialer.h  fltk.h  folder.h  fs.h  global_announce.h  local_announce.h  log.h  main.h  relay.h  tui.h  upnp.h  utils.cpp  utils.h
src/console/: activity.cpp  activity.h  config_activity.cpp  config_activity.h  default_activity.cpp  default_activity.h  local_peer_activity.cpp  local_peer_activity.h  new_folder_activity.cpp  new_folder_activity.h  peer_activity.cpp  peer_activity.h  sink.cpp  sink.h  tui_actor.cpp  tui_actor.h  utils.cpp  utils.h
src/db/: cursor.cpp  cursor.h  error_code.cpp  error_code.h  prefix.cpp  prefix.h  transaction.cpp  transaction.h  utils.cpp  utils.h
src/fs/: chunk_iterator.cpp  chunk_iterator.h  continuation.h  execution_context.h  file.cpp  file.h  file_actor.cpp  file_actor.h  file_cache.cpp  file_cache.h  fs_actor.cpp  fs_actor.h  fs_context.cpp  fs_context.h  fs_context.hpp  fs_proxy.cpp  fs_proxy.h  fs_slave.cpp  fs_slave.h  fs_supervisor.cpp  fs_supervisor.h  messages.cpp  messages.h  new_chunk_iterator.cpp  new_chunk_iterator.h  scan_actor.cpp  scan_actor.h  scan_scheduler.cpp  scan_scheduler.h  scan_task.cpp  scan_task.h  update_type.hpp  updates_mediator.cpp  updates_mediator.h  updates_support.cpp  updates_support.h  utils.cpp  utils.h  watched_folders.h  watcher_actor.cpp  (+1 more)
src/hasher/: bouncer.cpp  bouncer.h  bouncer_actor.cpp  bouncer_actor.h  hasher_actor.cpp  hasher_actor.h  hasher_plugin.cpp  hasher_plugin.h  hasher_proxy_actor.cpp  hasher_proxy_actor.h  hasher_supervisor.cpp  hasher_supervisor.h  messages.h
src/model/: arc.hpp  block_info.cpp  block_info.h  block_iterator.cpp  block_iterator.h  cluster.cpp  cluster.h  coro_fwd.h  device.cpp  device.h  device_id.cpp  device_id.h  device_state.cpp  device_state.h  error_code.h  file_block.cpp  file_block.h  file_info.cpp  file_info.h  folder.h  (+36 more)
src/ui-daemon/: CMakeLists.txt  command.cpp  command.h  error_code.cpp  error_code.h  governor_actor.cpp  governor_actor.h  main.cpp
src/ui-daemon/command/: add_folder.cpp  add_folder.h  add_peer.cpp  add_peer.h  inactivate.cpp  inactivate.h  pair_iterator.cpp  pair_iterator.h  rescan_dirs.cpp  rescan_dirs.h  share_folder.cpp  share_folder.h
src/ui-fltk/: CMakeLists.txt  app-manifest.xml  app.h  app.rc  app_supervisor.cpp  app_supervisor.h  application.h  augmentation.cpp  augmentation.h  content.cpp  content.h  entry_stats.h  log_colors.cpp  log_colors.h  log_panel.cpp  log_panel.h  log_sink.cpp  log_sink.h  log_table.cpp  log_table.h  log_utils.cpp  log_utils.h  main.cpp  main_window.cpp  main_window.h  presence_item.cpp  presence_item.h  qr_button.cpp  qr_button.h  static_table.cpp  static_table.h  symbols.cpp  symbols.h  toolbar.cpp  toolbar.h  tree_item.cpp  tree_item.h  tree_view.cpp  tree_view.h  utils.cpp  (+1 more)
src/ui-fltk/config/: category.cpp  category.h  control.cpp  control.h  properties.cpp  properties.h  property.cpp  property.h  table.cpp  table.h
src/ui-fltk/content/: file_table.cpp  file_table.h  folder_table.cpp  folder_table.h  remote_file_table.cpp  remote_file_table.h
src/ui-fltk/presence_item/: cluster.cpp  cluster.h  file.cpp  file.h  folder.cpp  folder.h  missing.cpp  missing.h
src/ui-fltk/table_widget/: base.cpp  base.h  checkbox.cpp  checkbox.h  choice.cpp  choice.h  input.cpp  input.h  int_input.cpp  int_input.h  label.cpp  label.h  path.cpp  path.h
src/ui-fltk/tree_item/: devices.cpp  devices.h  entry.cpp  entry.h  file_entry.cpp  file_entry.h  folder.cpp  folder.h  folders.cpp  folders.h  ignored_device.cpp  ignored_device.h  ignored_devices.cpp  ignored_devices.h  local_cluster_presence.cpp  local_cluster_presence.h  local_entry.cpp  local_entry.h  missing_item_presence.cpp  missing_item_presence.h  peer_device.cpp  peer_device.h  peer_dir.cpp  peer_dir.h  peer_dir_base.cpp  peer_dir_base.h  peer_entry.cpp  peer_entry.h  peer_entry_base.cpp  peer_entry_base.h  peer_folder.cpp  peer_folder.h  peer_folders.cpp  peer_folders.h  pending_device.cpp  pending_device.h  pending_devices.cpp  pending_devices.h  pending_folder.cpp  pending_folder.h  (+21 more)
tests/: 009-uri.cpp  010-upnp-support.cpp  011-tls-util.cpp  012-base32.cpp  013-global-discovery.cpp  014-configuration.cpp  015-logger.cpp  016-relay-support.cpp  017-fs-utils.cpp  018-dns.cpp  020-generic-map.cpp  021-orphaned-blocks.cpp  022-version.cpp  023-device-state.cpp  024-path.cpp  025-device_id.cpp  026-file_info.cpp  027-cluster.cpp  028-model-serialization.cpp  029-diff-generic.cpp  030-diff-load-cluster.cpp  031-diff-cluster_update.cpp  032-diff-modify.cpp  033-diffs-trivial.cpp  034-diff-local_update.cpp  034-diff-new_file.cpp  035-diff-local_update.cpp  035-diff-update_folder.cpp  035-local_update.cpp  036-diff-blocks.cpp  037-diff-update_folder.cpp  037-diff-upsert_folder.cpp  038-diff-clone_finish-file.cpp  039-diff-remove-peer.cpp  040-diff-contacts.cpp  041-diff-remove-folder.cpp  042-diff-interrupt.cpp  043-diffs-scan.cpp  045-diff-advance.cpp  050-device_id.cpp  (+79 more)
tests/data/: 49652gatedesc.xml  cert.der  external-ip.xml  mykey.der  port-mapping-success.xml  port-unmapping-failure.xml  sample-cert.pem  sample-key.pem  soap-failure.xml
(+481 files in other folders)
